note-names/basics.css
@font-face {
    font-family: "Notation";
    src: url("media/Bravura.woff") format("woff");
}

*,
*:before,
*:after {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

html, body {
    background-image: url("media/paper.jpg");
    min-height: 100%;
    text-align: center;

    user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    cursor: default;
}

body {
    padding-left: env(safe-area-inset-left);
    padding-right: env(safe-area-inset-right);
    font-size: 2em;
}

.ui-button {
    border-radius: 0.4em;
    transition: opacity 0.8s ease-in-out;
}

.ui-button-disabled {
    transition: opacity 0.8s ease-in-out;
}

.staff {
    font-family: "Notation";
    display: inline-block;
    white-space: nowrap;
    position: relative;
    height: 3.2em;
    overflow-x: visible;
    overflow-y: visible;
    margin-bottom: 0;
    margin-top: 0;
    margin-right: 0.2em;
    margin-left: 0.05em;
}

.staff-background {
    position: absolute;
    top: 0;
    left: 0;

    /* for debugging */
    /* letter-spacing: 1px; */
}

.timeSignature-top {
    position: relative;
    left: 0.207em;
}

.timeSignature-bottom {
    position: relative;
    left: -0.207em;
}

.note, .clef, .ledgerLine, .staffPiece {
    display: inline-block;
    position: relative;
}

.note {
    width: 0.8em;
}

.staffPiece {
    width: 0.4em;
}

.ledgerLine {
    letter-spacing: -1em;
    left: 0.22em;
}

.finalBarline {
    position: relative;
    left: -0.128em;
}

